# comfyui-xwave-xlitch-nodes

./: .gitignore  COMFYNODESGUIDE.md  COMFY_PLAN.md  CUSTOMNODES.md  DEFAULT_PARAMS_COMPARISON.md  INSTALLATION.md  LICENSE  NODE_COMPLIANCE_REVIEW.md  PROGRESS.md  README.md  __init__.py  pyproject.toml  requirements.txt  test_nodes.py  test_simple_node.py
.github/workflows/: publish.yml
custom_nodes/cellular_noise/: README.md  __init__.py  cellular_noise_node.py  requirements.txt
effects/: chromatic_aberration.py  color_channel.py  color_filter.py  color_shift_expansion.py  curved_hue_shift.py  gaussian_blur.py  histogram.py  jpeg_artifacts.py  noise.py  posterize.py  rgb_shift.py  sharpen.py
examples/: __init__.py
nodes/color/: __init__.py  chromatic_aberration.py  color_channel_manipulation.py  color_filter.py  color_shift_expansion.py  curved_hue_shift.py  gaussian_blur.py  histogram_glitch.py  jpeg_artifacts.py  noise_effect.py  posterize.py  rgb_channel_shift.py  sharpen.py
nodes/noise/: cellular_noise_node.py
nodes/pixelate/: pixelate_node.py
utils/: base_node.py  image_converter.py
web/js/: xwave_color_picker.js  xwave_widgets.js
