[project]
name = "xwave-xlitch-nodes"
description = "A collection of artistic glitch and image manipulation nodes for ComfyUI, featuring advanced noise effects, color manipulations, distortions, and more."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["# Core dependencies for ComfyUI XWAVE Nodes", "# Note: ComfyUI should already have torch installed", "# These are additional dependencies needed for the effects", "# Image processing", "Pillow>=9.0.0", "numpy>=1.20.0", "scipy>=1.7.0"]

[project.urls]
Repository = "https://github.com/XWAVEart/comfyui-xwave-xlitch-nodes"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-xwave-xlitch-nodes"
Icon = ""
includes = []
